# gameboy-audio

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pages.yml
docs/: tutorial-roadmap-notes.md
experiments/: noise_machines.py
lessons/: 01_sample_loop.py  02_pulse_duty.py  03_wave_channel.py  04_noise_lfsr.py  05_tiny_player.py  _lesson_path.py
src/gameboy_audio/: __init__.py  apu.py  audio.py  main.py
website/: 01-samples.html  02-wave-shapes.html  03-noise.html  03-note-sequences.html  04-noise.html  04-two-sequences.html  04-two-voices.html  05-composition.html  05-noise.html  05-wavetable.html  06-composition.html  06-gameboy-interface.html  06-wavetable.html  07-gameboy-interface.html  07-wavetable.html  08-gameboy-interface.html  app.js  bonus-lfsr.html  bonus-speakers.html  bonus-wavetable.html  chapter-player.js  index.html  styles.css
