[project]
name = "gameboy-audio"
version = "0.1.0"
description = "Small educational Game Boy audio sketches"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gameboy-audio = "gameboy_audio.main:main"

[tool.setuptools.packages.find]
where = ["src"]
